# http-server

./: .clang-tidy  .gitignore  Doxyfile  README.md  format.sh  home.ini  meson.build  static-code-analyze.sh
include/: PropertiesParser.h  common.h  dl.h  dl1.h
module/: meson.build
module/cJSON/: meson.build
module/dl/: dl1.c  dl2.cpp  meson.build
src/: main.cpp  meson.build
test/: meson.build
